Preparing code to JDK9+ by suppressing JDK9 deprecations